Minor mistake in conclusion

--- a/conclusion.Rmd
+++ b/conclusion.Rmd
@@ -4,6 +4,6 @@ After analyzing the performance of our stock portfolio, we can conclude that the
 
 There are limitations to this project and this portfolio. For one, the number of stocks that we chose (five) is a relatively low number for an index. Therefore, we expect that the volatility of our index will be much higher than that of the market since the volatility of each stock is weighted more (i.e. lack of diversification). Additionally, the meme stocks that we chose may not be indicative of the performance of ALL meme stocks, as there are several dozen to choose from; hence, our results may vary if we decided to replicate this project with a different set of stocks.
 
-If this project were to be expanded, we would look to make a more interactive graph than a simple candlestick chart. We would also expand the number of stocks to include into the index so that the principle of diversification plays a lesser role in our analysis.
+If this project were to be expanded, we would look to make a more interactive graph than a simple barchart showing the composition of our index, such as a treemap with dozens of stocks categorized by market sector. We would also expand the number of stocks to include into the index so that the principle of diversification plays a lesser role in our analysis.
 
-Overall, we learned that, while summary data may show the obvious (that long-term investment in meme stocks will likely lead to huge losses), using data visualizations to gain a better understanding of our graphs can lead to more nuanced conclusions and analysis. For example, there are certain points in the past year that our index outperformed the overall market, and there are potential strategies around volatility that can lead to profitable trades.
+Overall, we learned that, while summary data may show the obvious (that long-term investment in meme stocks will likely lead to huge losses), using data visualizations to gain a better understanding of our graphs can lead to more nuanced conclusions and analysis. For example, there are certain points in the past year that our index outperformed the overall market, and our graphs also revealed potential strategies around volatility that can lead to profitable trades.
