--- a/results.Rmd
+++ b/results.Rmd
@@ -87,7 +87,7 @@ fig
 
 ```
 
-When looking at the Beta and Alpha graph, the average investor would be slightly nervous, and rightly so. The beta is always above 1, and hovers between a value of 0.7 and 6. This means that our index is 0.7-6 times more volatile than the general market, which means any money invested has greater potential to gain or lose throughout the year due to high volatility. Generally, the higher the beta (and the greater the range of beta), the greater the risk+reward is compared to the general market. Although this may be good news for high-risk traders, the trade off may not be worth it. Generally, an alpha above 0 means that the stock performed relatively well compared to what the volatility of the stock predicted (for more information, please read on the CAPM model, of which this analysis is based). 0 means that it performed to expectation, and negative means it performed poorly to expectations. Our meme index firmly falls in this final category, with an alpha value as low as -34, which is nearly unattainable even for individual stocks, which typically have the highest beta, and therefore alpha, ranges. Therefore, both long-term traders and swing traders should stay far away from the index that we have generated, as returns for alpha very rarely reaches positive territory.
+When looking at the Beta and Alpha graph, the average investor would be slightly nervous, and rightly so. The beta hovers between a value of 0.7 and 6. This means that our index is 0.7-6 times more volatile than the general market, which means any money invested has greater potential to gain or lose throughout the year due to high volatility. Generally, the higher the beta (and the greater the range of beta), the greater the risk+reward is compared to the general market. Although this may be good news for high-risk traders, the trade off may not be worth it. Generally, an alpha above 0 means that the stock performed relatively well compared to what the volatility of the stock predicted (for more information, please read on the CAPM model, of which this analysis is based). 0 means that it performed to expectation, and negative means it performed poorly to expectations. Our meme index firmly falls in this final category, with an alpha value as low as -34, which is nearly unattainable even for individual stocks, which typically have the highest beta, and therefore alpha, ranges. Therefore, both long-term traders and swing traders should stay far away from the index that we have generated, as returns for alpha very rarely reaches positive territory.
 
 ## Correlation Matrices
 
